--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
    span{
      font-size: 15px;
    }
+
+   .link{
+    text-decoration: none;
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: 166px;
+    border: 1px solid white;
+    border-radius: 28px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 71px;
+   }
+
+   .link:hover{
+     background-color: white;
+     color: black;
+   }
  </style>
 </head>
 
@@ -19,9 +40,10 @@
   UTTAR SONAKHALI SCHOOL & COLLEGE
   <br>
   <span>ESTD: 1935, P.O: Sonakhali, PS: Amtali, Dist: Barguna</span>
-
-
 </div>
+
+<a class="link" href="reunion-2021/registration/form.php">Register for Re-union 2021</a>
+
 <img class="photo-collage" src="photo-collage.png">
 <!-- <div class="content">
  
